redact (0.9.3) urgency=low;
  * Fixed a minor error in when to seed the random number generator.
  * Updated year in the license.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Tue, 16 Jul 2019 07:47:52 -0500

redact (0.9.2) urgency=low;
  * Moved the call to clone_attrs() into the move_file function to simplify
    the code.
  * Renamed some of the arguments to functions to make their use clearer.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sun, 08 Jul 2018 20:11:41 -0500

redact (0.9.1) urgency=low;
  * Renamed the linked list and its source files to tty_list. This was
    done to better describe the purpose of the linked list, which is to
    store and track the user's TTYs.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Thu, 17 May 2018 13:11:28 -0500

redact (0.9.0); urgency=low;
  * Changed the shred() function to always return -1 if an error occurred.
  * Made changes to various comments.
  * Updated README.md with information about new functionality.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Fri, 04 May 2018 16:55:41 -0500

redact (0.8.9); urgency=low;
  * Fixed a bug in the extract_time function that caused valgrind to
    complain about an uninitialized variable.
  * Made a minor change to the extract_function.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Thu, 03 May 2018 14:53:18 -0500

redact (0.8.8); urgency=low;
  * Added a function to delete files in a more secure manner. Now
    the old log files are securely deleted in order to make forensic
    recovery of the original log files difficult.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Tue, 01 May 2018 10:06:10 -0500

redact (0.8.7); urgency=low;
  * Added a new option, -d which causes redact to only remove log entries
    created in the last N days. The number of days being specified by
    the user. For example, to only wipe entries created in the last
    30 days, a user would run the program like so:
    "./redact -a -d 30 USERNAME"